--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.1.0",
+    "@visactor/vchart": "^1.8.9",
     "clsx": "^2.0.0",
     "immer": "^10.0.3",
     "next": "14.0.4",
@@ -27,5 +29,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">18.0.0"
   }
 }
